--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,157 +1,18 @@
 .header {
-  position: relative;
-  height: 100vh;
-
-  &__wrap {
-    width: 100%;
-    background-color: $black;
-    background-image: url("../../img/header-bg-desktop.jpg");
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-    z-index: 0;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      z-index: 0;
-      width: 100%;
-      height: 100%;
-      background-color: $black-50;
-    }
-  }
+  background-color: $white;
+  box-shadow: 0px 77px 90px 0px rgba(119, 142, 162, 0.2);
 
   &__top {
     display: flex;
     justify-content: space-between;
-    padding-top: 31px;
-    padding-bottom: 20px;
-  }
-
-  &__descr {
-    @include font-xxxs;
-    margin: 0;
-    letter-spacing: 0.5px;
-    transition: all 0.3s ease-in-out;
-    padding-right: 15px;
-    box-sizing: border-box;
-  }
-
-  &__descr-work,
-  &__mail,
-  &__callback {
-    @include font-xxxs-sb;
-    transition: all 0.3s ease-in-out;
-  }
-
-  &__descr-work {
-    &:hover {
-      color: $gold;
-      cursor: pointer;
-      transition: all 0.3s ease-in-out;
-    }
-  }
-
-  &__mail {
-    border-bottom: 1px dashed transparent;
-    padding-bottom: 5px;
-    cursor: pointer;
-
-    &:hover {
-      color: $blue;
-      border-bottom: 1px dashed $blue;
-      transition: all 0.3s ease-in-out;
-    }
-  }
-
-  &__callback {
-    color: $blue;
-    border-bottom: 1px dashed $blue;
-    padding-bottom: 5px;
-    cursor: pointer;
-
-    &:hover {
-      color: $gold;
-      border-bottom: 1px dashed $gold;
-      transition: all 0.3s ease-in-out;
-    }
-  }
-
-  &__content {
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
-    margin-bottom: 90px;
-  }
-
-  &__logo {
-    @include tablet-small {
-      order: 1;
-    }
-  }
-
-  &__burger {
-    @include tablet-small {
-      margin-right: 35px;
-      order: 0;
-    }
-  }
-
-  &__slogan {
-    width: 100%;
-    max-width: 105px;
-    margin: 0;
-    margin-left: 14px;
-    @include font-xxxs;
-    letter-spacing: 0.5px;
-
-    @include tablet-small {
-      order: 2;
-    }
+    flex-wrap: wrap;
+    padding-top: 80px;
+    padding-bottom: 65px;
+    background-color: $white;
   }
 
   &__menu {
-    margin-left: 2.9%;
-
-    @include laptop-only {
-      margin-left: 4.7%;
-    }
-
-    @include tablet-small {
-      display: none;
-      order: 0;
-    }
-  }
-
-  &__phone {
-    margin-left: auto;
-
-    @include tablet-small {
-      order: 3;
-    }
-  }
-
-  &__title {
-    margin: 0;
-    margin-bottom: 81px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-
-    & span:nth-child(1) {
-      @include font-xxl-exb;
-      color: $gold;
-    }
-
-    & span:nth-child(2) {
-      @include font-large-sb;
-      line-height: 35px;
-      letter-spacing: 1.8px;
-      color: $white;
-    }
+    margin-top: 70px;
   }
 }
