--- a/src/sass/general/fonts.scss
+++ b/src/sass/general/fonts.scss
@@ -1,4 +1,3 @@
-@include font-face("ms-regular", "Montserrat-Regular", 400);
-@include font-face("ms-semi-bold", "Montserrat-SemiBold", 600);
-@include font-face("ms-extra-bold", "Montserrat-ExtraBold", 800);
+@include font-face("sfui-reg", "sfui-reg", 400);
+
 
