--- a/src/sass/blocks/btn.scss
+++ b/src/sass/blocks/btn.scss
@@ -20,41 +20,54 @@
   }
 
   &--burger {
-    display: none;
-    width: 24px;
-    height: 15px;
+    display:none;
+    position: relative;
+    width: 54px;
+    height: 40px;
 
     & span {
       position: absolute;
       top: 0;
       right: 0;
-      width: 25px;
-      height: 3px;
-      background-color: $white;
+      width: 100%;
+      height: 5px;
+      border-radius: 2px;
+      background-color: $tomato;
       transition: 0.3s all ease;
 
-      &::before,
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 25px;
-        height: 3px;
+      @include mobile {
         background-color: $white;
-        transition: 0.3s all ease;
       }
 
-      &::before {
-        top: 5px;
-      }
-
-      &::after {
-        top: 10px;
+      @include desktop-sm {
+        display: block;
       }
     }
 
-    @include tablet-small {
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 5px;
+      background-color: $tomato;
+      transition: 0.3s all ease;
+      @include mobile {
+        background-color: $white;
+      }
+    }
+
+    &::before {
+      top: 12px;
+    }
+
+    &::after {
+      top: 25px;
+    }
+
+    @include desktop-sm {
       display: block;
     }
   }
