--- a/src/sass/general/variables.scss
+++ b/src/sass/general/variables.scss
@@ -1,9 +1,10 @@
-$width-desktop:   1640px;
-$width-laptop:    1200px;
+$width-desktop: 1640px;
+$width-laptop: 1280px;
+$width-laptop-sm: 1152px;
 $width-tablet-lg: 1024px;
-$width-tablet:     768px;
-$width-mobile:     375px;
-$width-min:        320px;
+$width-tablet: 768px;
+$width-mobile: 375px;
+$width-min: 320px;
 
 $width-tablet-media: 1000px;
 
@@ -19,9 +20,9 @@ $font-main: 16px;
 
 $black: #000000;
 $white: #ffffff;
+$white-80: rgba(255, 255, 255, 0.8);
 
 $grey: #474545;
 $tomato: #c1321a;
-
+$tomato-80: rgba(193, 50, 26, 0.8);
 $transparent: transparent;
-
